# AEOSBench

./: .flake8  .gitignore  .gitmodules  .todd_version  CITATION.cff  README.md  eval_all.sh  index.html  makefile  pyproject.toml  run_debug.sh  sensor_data.json  setup.sh
.github/: CODE_OF_CONDUCT.md
.github/workflows/: pre-commit.yml
configs/: tmp.py
constellation/: __init__.py  constants.py  controller.py  task_managers.py
constellation/algorithms/: __init__.py  base.py  calcutils.py  dumpdata.py  optimal.py  replay.py
constellation/callbacks/: __init__.py  base.py  composed.py  controller_holder.py  early_stop.py  memo.py
constellation/data/: __init__.py  actions.py  constellations.py  coordinates.py  orbits.py  tasksets.py  visualization.py
constellation/environments/: __init__.py  base.py  geodetics.py  timer.py
constellation/environments/basilisk/: __init__.py  basilisk_environment.py  basilisk_satellite.py  constants.py  time.py
constellation/evaluators/: __init__.py  base.py  completion_rate.py  completion_rate_p.py  completion_rate_w.py  completion_rate_wp.py  power_usage.py  reward.py  turn_around_time.py
constellation/loggers/: __init__.py  base.py  base_logger.py  forbid_tasks.py  pth_logger.py  trajectory.py  visualization_logger.py
constellation/new_transformers/: __init__.py  config.py  config_timemodel.py  constants.py  dataset.py  model.py  registries.py  time_model.py  train.py  val.py
constellation/new_transformers/utils/: misc.py
constellation/rl/: __init__.py  config.py  config_eval.py  controller_environment.py  critic.py  environment.py  eval_all.py  eval_controller.py  eval_with_controller.py  merge_csvs.py  policy.py  train.py  utils_csv.py
static/css/: index.css
tools/: all_data_generator.py  compare_trajectory_cr.py  compute_dataset_statistics.py  evaluate_baseline.py  generate_annotations.py  generate_constellations_and_tasksets.py  generate_data.py  generate_mrp_taskset.py  generate_satellites.py  generate_satellites.sh  generate_tabu_lists.py  generate_tasks.py  generate_tiny_annotations.py  generate_trajectories.py  merge_tabu.py  patch_constellations.py  test_baseline.py
tools/mrp_fit/: do_test.py  gen_one_sat.py  post_process.py  post_process2.py  result.txt
